# SelecaoJump

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  controller.py  main.py  pyproject.toml  requirements.txt
backend/data/: pequeno.csv
backend/modules/: __init__.py  dfg_visualizer.py
backend/routes/: __init__.py  api.py  controller.py  dashboard.py  processos.py  visualization.py
backend/schemas/: __init__.py  processos.py  stats.py
backend/utils/: __init__.py
frontend/: .gitignore  README.md  angular.json  netlify.toml  package-lock.json  package.json
frontend/cypress/e2e/: analysis.cy.ts  home.cy.ts
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/analysis/: analysis.facade.spec.ts  analysis.facade.ts  analysis.initializer.ts  analysis.module.ts
frontend/src/app/analysis/api/: analysis.api.spec.ts  analysis.api.ts
frontend/src/app/analysis/components/analysis-table/: analysis-table.component.html  analysis-table.component.scss  analysis-table.component.spec.ts  analysis-table.component.ts
frontend/src/app/analysis/types/: processoParams.ts
frontend/src/app/flowchart/: flowchart-routing.module.ts  flowchart.facade.spec.ts  flowchart.facade.ts  flowchart.initializer.ts  flowchart.module.ts
frontend/src/app/flowchart/types/: ProcessoStatistics.ts
frontend/src/app/shared/: shared.module.ts
frontend/src/app/shared/pipes/: duration-time-by-seconds.pipe.spec.ts  duration-time-by-seconds.pipe.ts
frontend/src/theme/: variables.scss
(+26 files in other folders)
