[tool.poetry]
name = "jdsc2-railway-fastapi"
version = "1.0.0"
description = "A FastAPI server to JuMP challenge"
authors = ["José Daniel <jdsc2@cin.ufpe.br"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
